I reverted all the (fourcc) commits in the meantime, those weren't related. According to IRC users using linux it broke on another date (20070831) so it might be FFmpeg version related.
Jean-Baptiste Kempfchanged title from FLV muxing not working to FLV (ffmpeg) muxing not working
changed title from FLV muxing not working to FLV (ffmpeg) muxing not working
I have a working copy of vlc 0.9 transcoding from mp4v to FLV1. The revision is 23947. I use ffmpeg from the debian multimedia repo on a debian Etch system.
Here are the version specs:
~# ffmpeg --version
FFmpeg version SVN-rUNKNOWN, Copyright (c) 2000-2007 Fabrice Bellard, et al.
configuration: --prefix=/usr --libdir=
VLC media player 0.9.0-svn Grishenko
[00000001] main libvlc debug: VLC media player - version 0.9.0-svn Grishenko - (c) 1996-2007 the VideoLAN team
[00000001] main libvlc debug: libvlc was configured with ./configure '--mandir=/share/man' '--host=i486-linux-gnu' '--build=i486-linux-gnu' '--enable-maintaner-mode' '--enable-release' '--prefix=/usr' '--enable-libtool' '--enable-fast-install' '--disable-update-check' '--disable-gnome' '--disable-gtk' '--disable-familiar' '--disable-fb' '--enable-ggi' '--enable-sdl' '--enable-esd' '--enable-mad' '--enable-arts' '--enable-jack' '--enable-lirc' '--enable-a52' '--enable-aa' '--enable-dvbpsi' '--enable-mozilla' '--disable-kde' '--enable-mp4' '--enable-dvb' '--disable-satellite' '--enable-ogg' '--enable-vorbis' '--enable-shout' '--enable-wxwidgets' '--with-wx-config=wx-config' '--disable-qt4' '--disable-slp' '--enable-flac' '--disable-skins' '--disable-basic-skins' '--enable-skins2' '--enable-freetype' '--enable-mkv' '--enable-speex' '--enable-caca' '--enable-live555' '--enable-libmpeg2' '--enable-fribidi' '--enable-cdio' '--enable-mod' '--enable-theora' '--enable-modplug' '--enable-dvdnav' '--enable-gnutls' '--enable-ffmpeg' '--enable-ncurses' '--enable-smb' '--disable-gnomevfs' '--enable-bonjour' '--enable-mpc' '--enable-vcd' '--enable-vcdx' '--enable-notify' '--enable-debug' '--enable-twolame' '--enable-faad' '--disable-zvbi' '--enable-telx' '--enable-mediacontrol-bindings' '--disable-x264' '--enable-alsa' '--enable-dv' '--enable-v4l' '--enable-v4l2' '--enable-pvr' '--enable-svgalib' '--enable-dvd' '--without-dvdcss' 'build_alias=i486-linux-gnu' 'host_alias=i486-linux-gnu'
[00000001] main libvlc: Running vlc with the default interface. Use 'cvlc' to use vlc without interface.
[00000001] main libvlc debug: translation test: code is "C"
VLC version 0.9.0-svn Grishenko
Compiled by root@*************************
Compiler: gcc version 4.1.2 20061115 (prerelease) (Debian 4.1.1-21)
Based upon svn changeset [23947M]
This program comes with NO WARRANTY, to the extent permitted by law.
You may redistribute it under the terms of the GNU General Public License;
see the file named COPYING for details.
Written by the VideoLAN team; see the AUTHORS file.
On the server that trascodes from a cctv card to mp4v I use the command:
vlc -vvv v4l:/dev/video0:norm=ntsc:size=320x240:channel=0 --sout '#transcode{display=noaudio,vcodec=mp4v,vb=200,vt=800000,keyint=80,}:std{access=http,mux=asf,dst=:9024}'
And on the server that transcodes from mp4v to FLV I use the command:
vlc -vvv http://**************:9024 --sout='#transcode{scale=1,vcodec=FLV1,vb=400}:std{access=http,dst=:8080/test.flv}'
The ffmpeg file that broke during revision 10285, here are the changes since 10285 till now. This could help fix the way VLC uses ffmpeg for flv transcoding.
I managed to get flv-streaming working with following patch on recent ffmpeg:
So basicly revert that cut_dts = AV_NOPTS_VALUE, and set it pkt.dts - 1
Index: modules/codec/ffmpeg/mux.c
/* this is another hack to prevent libavformat from triggering the "non monotone timestamps" check in avformat/utils.c */
/* this is another hack to prevent libavformat from triggering the "non monotone timestamps" check in avformat/utils.c
p_stream->cur_dts = AV_NOPTS_VALUE;
+*/