set stream->dr_dts according to i_dts instead AV_NOPTS_VALUE; seems to fix that flv muxing issue, and doesn't seem to cause regression. fixes #1285. Please notify if you notice something broken after this.